@@ -4,6 +4,9 @@ Change history
 Release Candidate 3
 ===================
 
+- Applied Bryan Brown's patch fixing MR-273. This one adds a new attribute to 
+  the routing configuration node: 'excludeAppPath'
+
 - Applied goodwill's patch fixing MR-275
   "DefaultRailsEngineContext triggers RTE on ApplicationPhysicalPath 
    when running under ASPX Dev Server with virtual directory"
